// protoc will be automatically invoked when save.
// see settings.json
syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/whitekid/revp/pb";

package api.v1alpha1.revp;

// Revp main services
service Revp {
  rpc Stream(stream StreamData) returns (stream StreamData) {}
}

message StreamData {
  optional string secret = 1;
  bytes data = 2;
  enum Error {
    NO_ERROR = 0;
    EOF = 1;
  }
  optional Error err = 3;
}

// below is example
service StreamExample {
  rpc ClientStream(stream StreamExampleData) returns (StreamExampleSummary) {}
  rpc ServerStream(StreamReq) returns (stream StreamExampleData) {}
  rpc BidirectionalStream(stream StreamExampleData)
      returns (stream StreamExampleData) {}
}

message StreamExampleData { string data = 1; }

message StreamReq {
  int32 count = 1;
  int64 elapse_milliseconds = 2;
}

message StreamExampleSummary { string summary = 1; }

// Examples
// Say hello and handshape
service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }
